--- a/workspaces/mamonde_main/css/scss/style.css
+++ b/workspaces/mamonde_main/css/scss/style.css
@@ -49,6 +49,17 @@ img {
   margin-top: 1.04vw;
 }
 
+.btn-view-more::after {
+  content: "";
+  display: inline-block;
+  width: 1.549vw;
+  height: 0.361vw;
+  margin-left: 0.62vw;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-image: url(../../img/mamonde_main_btn_view_more.png);
+}
+
 /* layout-top */
 .layout-top .section-inner {
   width: 100%;
@@ -227,23 +238,45 @@ img {
   margin-left: 14.53125%;
 }
 .layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box {
-  margin-left: 16.40625%;
+  margin-left: 18.3%;
 }
 .layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap {
   display: flex;
+  height: 30.26vw;
 }
 .layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list {
   width: 17.14vw;
-  height: 24.27vw;
   margin-right: 1.4861995754%;
 }
-.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-text__title {
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-img {
+  display: block;
+  position: relative;
+  padding-bottom: 141.8867924528%;
+}
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-text {
+  margin-top: 4.0566037736%;
+  color: #31261d;
+}
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-text__title {
   display: inline-block;
   font-size: 1.136vw;
+  font-weight: 600;
+}
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-text__desc {
+  margin-top: 4.0566037736%;
+  line-height: 1.3;
+  font-size: 1.033vw;
 }
 .layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list:nth-child(1) .list-text__title {
   background-color: #fcffb2;
-  padding: 0 0.31vw;
+  padding: 0.3vw 0.31vw 0.26vw;
 }
 .layout-body .section-content.mamonde-exclusive {
   margin-top: 7.81vw;
@@ -255,11 +288,116 @@ img {
   width: 9.32vw;
   height: auto;
 }
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .text-wrap {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 14.375%;
+  margin-left: 14.53125%;
+  width: 25.555vw;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .text-wrap__num {
+  font-size: 3.356vw;
+  font-weight: bold;
+  color: #e9e0da;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .text-wrap__title {
+  font-size: 1.549vw;
+  font-weight: 600;
+  padding-bottom: 1.033vw;
+  border-bottom: 1px solid #2c221c;
+  max-width: 15.99vw;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .text-wrap .tag-wrap {
+  margin-top: 1.033vw;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .text-wrap .tag-wrap__tag {
+  font-size: 1.033vw;
+  line-height: 1.549vw;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .text-wrap .btn-view-more {
+  margin-top: 2.323vw;
+  display: inline-block;
+  font-size: 0.929vw;
+  font-weight: 600;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .navi-bar {
+  width: 4.95vw;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin-top: 36.875%;
+  margin-left: 14.53125%;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box {
+  margin-left: 29.5238095238%;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap {
+  display: flex;
+  height: 30.52vw;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list {
+  margin-right: 1.849568434%;
+  width: 30.52vw;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-img {
+  position: relative;
+  display: block;
+  padding-bottom: 100%;
+}
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .layout-body .section-content.brand-story {
   margin-top: 6.77vw;
 }
+.layout-body .section-content.brand-story .section-brand-story-contents .contents-wrap {
+  display: flex;
+}
+.layout-body .section-content.brand-story .section-brand-story-contents .contents-wrap .img-wrap {
+  width: 48.33vw;
+}
+.layout-body .section-content.brand-story .section-brand-story-contents .contents-wrap .text-box {
+  background-color: #e1dee3;
+  width: 31.67vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.layout-body .section-content.brand-story .section-brand-story-contents .contents-wrap .text-box .text-wrap {
+  margin-left: 15.5056179775%;
+}
+.layout-body .section-content.brand-story .section-brand-story-contents .contents-wrap .text-box .text-wrap__desc {
+  font-size: 1.033vw;
+  color: #31261d;
+  line-height: 1.7;
+}
+.layout-body .section-content.brand-story .section-brand-story-contents .contents-wrap .text-box .text-wrap__desc:nth-child(2) {
+  margin-top: 9.3085106383%;
+  margin-bottom: 11.9680851064%;
+}
+.layout-body .section-content.brand-story .section-brand-story-contents .contents-wrap .text-box .text-wrap .btn-view-more {
+  font-size: 0.929vw;
+  font-weight: 600;
+}
 .layout-body .section-content.with-mamonde {
   margin-top: 6.77vw;
+}
+.layout-body .section-content.with-mamonde .section-with-contents .btn-wrap {
+  padding: 2.22vw 0 3.614vw;
+  display: flex;
+  justify-content: center;
+}
+.layout-body .section-content.with-mamonde .section-with-contents .btn-wrap .btn-more {
+  font-size: 0.929vw;
+  border: 1px solid #2c221c;
+  color: #2c221c;
+  padding: 0.63vw 2.5vw;
 }
 
 /* layout__footer */
