--- a/workspaces/mamonde_main/css/scss/style.scss
+++ b/workspaces/mamonde_main/css/scss/style.scss
@@ -34,7 +34,16 @@ img {width: 100%;height: 100%; object-fit: cover;}
 .section-main-contents {
     margin-top: 1.04vw;
 }
-
+.btn-view-more::after {
+    content: '';
+    display: inline-block;
+    width: 1.549vw;
+    height: 0.361vw;
+    margin-left: 0.62vw;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-image: url(../../img/mamonde_main_btn_view_more.png);
+}
 
 /* layout-top */
 .layout-top {
@@ -226,34 +235,56 @@ img {width: 100%;height: 100%; object-fit: cover;}
                         left: 0;
                         margin-top: 36.45833333333%;
                         margin-left: 14.53125%;
-
+                    
                     }
+
                     .prd-list-box {
-                        margin-left: 16.40625%;
+                        margin-left: 18.3%;
                         .prd-list-wrap {
                             display: flex;
+                            height: 30.26vw;
                             .list {
                                 width: 17.14vw;
-                                height: 24.27vw;
                                 margin-right: 1.48619957537%;
-                                .list-text{
-                                    &__title {
-                                        display: inline-block;
-                                       font-size: 1.136vw;
+                                    .list-area {
+                                        .list-img {
+                                            display: block;
+                                            position: relative;
+                                            padding-bottom: 141.88679245283%;
+                                            img {
+                                                position: absolute;
+                                                top: 0;
+                                                left: 0;
+                                                width: 100%;
+                                                height: 100%;
+                                            }
+                                        }
+                                        .list-text{
+                                            margin-top: 4.05660377358%;
+                                            color: #31261d;
+                                            &__title {
+                                                display: inline-block;
+                                                font-size: 1.136vw;
+                                                font-weight: 600;
+                                            }
+                                            &__desc {
+                                                margin-top: 4.05660377358%;
+                                                line-height: 1.3;
+                                                font-size: 1.033vw;
+                                            }
+                                        }
                                     }
-                                }
-                                &:nth-child(1) {
-                                    .list-text{
-                                        &__title {
-                                           background-color: #fcffb2;
-                                           padding: 0 0.31vw;
+                                    &:nth-child(1) {
+                                        .list-text{
+                                            &__title {
+                                            background-color: #fcffb2;
+                                            padding: 0.3vw 0.31vw 0.26vw;
+                                            }
                                         }
                                     }
                                 }
                             }
-                            
                         }
-                    }
                 }
             }
         }
@@ -268,15 +299,127 @@ img {width: 100%;height: 100%; object-fit: cover;}
                         height: auto;
                     }
                 }  
+                .section-main-contents {
+                    .text-wrap {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        margin-top: 14.375%;
+                        margin-left: 14.53125%;
+                        width: 25.555vw;
+                        &__num {
+                            font-size: 3.356vw;
+                            font-weight: bold;
+                            color: #e9e0da;
+                        }
+                        &__title {
+                            font-size: 1.549vw;
+                            font-weight: 600;
+                            padding-bottom: 1.033vw;
+                            border-bottom: 1px solid #2c221c;
+                            max-width: 15.99vw;
+                        }
+                        .tag-wrap {
+                            margin-top: 1.033vw;
+                            &__tag {
+                                font-size: 1.033vw;
+                                line-height: 1.549vw;
+                            }
+                        }
+                        .btn-view-more {
+                            margin-top: 2.323vw;
+                            display: inline-block;
+                            font-size: 0.929vw;
+                            font-weight: 600;
+                        }
+                    }
+                    .navi-bar {
+                        width: 4.95vw;
+                        height: auto;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        margin-top: 36.875%;
+                        margin-left: 14.53125%;
+                    
+                    }
+                    .prd-list-box{
+                        margin-left: 29.52380952381%;
+                        .prd-list-wrap {
+                            display: flex;
+                            height: 30.52vw;
+                            .list {
+                                margin-right: 1.84956843403%;
+                                width: 30.52vw;
+                                .list-img {
+                                    position: relative;
+                                    display: block;
+                                    padding-bottom: 100%;
+                                    img {
+                                        position: absolute;
+                                        top: 0;
+                                        left: 0;
+                                        width: 100%;
+                                        height: 100%;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
              }
         }
         /* Brand Story */ 
         .section-content.brand-story{
             margin-top: 6.77vw;
+            .section-brand-story-contents {
+                .contents-wrap {
+                    display: flex;
+                    .img-wrap{
+                        width: 48.33vw;
+                    }
+                    .text-box{
+                        background-color: #e1dee3;
+                        width: 31.67vw;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                            .text-wrap{
+                                margin-left: 15.50561797753%;
+                            &__desc {
+                                font-size: 1.033vw;
+                                color: #31261d;
+                                line-height: 1.7;
+                                &:nth-child(2) {
+                                    margin-top: 9.3085106383%;
+                                    margin-bottom: 11.96808510638%;
+                                }
+                            }
+                            .btn-view-more {
+                                font-size: 0.929vw;
+                                font-weight: 600;
+                            }
+                        }
+                    }
+                }
+            }
         }
         /* with Mamonde */ 
         .section-content.with-mamonde{
             margin-top: 6.77vw;
+            .section-with-contents{
+                .btn-wrap {
+                    padding: 2.22vw 0 3.614vw;
+                    display: flex;
+                    justify-content: center;
+                    .btn-more {
+                        font-size: 0.929vw;
+                        border: 1px solid #2c221c;
+                        color: #2c221c;
+                        padding: 0.63vw 2.5vw;
+                    }
+                }
+            }
         }
 }
 
