--- a/workspaces/mamonde_main/css/scss/style.css
+++ b/workspaces/mamonde_main/css/scss/style.css
@@ -144,16 +144,15 @@ img {
   width: 1.09vw;
   height: 1.09vw;
 }
-.layout-top .section-inner .section-main-visual .main-title {
+.layout-top .section-inner .section-main-visual .main-title-wrap {
   position: absolute;
   top: 0;
   left: 0;
   margin-top: 13.75%;
   margin-left: 17.3958333333%;
-  left: 0;
   color: #fff;
 }
-.layout-top .section-inner .section-main-visual .main-title__b-text {
+.layout-top .section-inner .section-main-visual .main-title-wrap .main-title--b-text {
   display: block;
   font-style: normal;
   font-size: 2.34vw;
@@ -161,7 +160,7 @@ img {
   font-weight: bold;
   margin-bottom: 6.6923653496%;
 }
-.layout-top .section-inner .section-main-visual .main-title__text {
+.layout-top .section-inner .section-main-visual .main-title-wrap .main-title--text {
   display: block;
   font-size: 1.25vw;
   margin-bottom: 16.864760681%;
@@ -203,7 +202,7 @@ img {
 .layout-body .section-content.skincare-solution .section-inner {
   padding-right: 0;
 }
-.layout-body .section-content.skincare-solution .section-inner .section-tit-box .section-highlight {
+.layout-body .section-content.skincare-solution .section-inner .section-title-wrap .section-highlight {
   width: 11.67vw;
   height: auto;
 }
@@ -248,33 +247,33 @@ img {
   width: 17.14vw;
   margin-right: 1.4861995754%;
 }
-.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-img {
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-detail__list-img {
   display: block;
   position: relative;
   padding-bottom: 141.8867924528%;
 }
-.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-img img {
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-detail__list-img img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
 }
-.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-text {
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-detail__list-text {
   margin-top: 4.0566037736%;
   color: #31261d;
 }
-.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-text__title {
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-detail__list-text--title {
   display: inline-block;
   font-size: 1.136vw;
   font-weight: 600;
 }
-.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-area .list-text__desc {
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-detail__list-text--desc {
   margin-top: 4.0566037736%;
   line-height: 1.3;
   font-size: 1.033vw;
 }
-.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list:nth-child(1) .list-text__title {
+.layout-body .section-content.skincare-solution .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list:nth-child(1) .list-detail__list-text--title {
   background-color: #fcffb2;
   padding: 0.3vw 0.31vw 0.26vw;
 }
@@ -284,7 +283,7 @@ img {
 .layout-body .section-content.mamonde-exclusive .section-inner {
   padding-right: 0;
 }
-.layout-body .section-content.mamonde-exclusive .section-inner .section-tit-box .section-highlight {
+.layout-body .section-content.mamonde-exclusive .section-inner .section-title-wrap .section-highlight {
   width: 9.32vw;
   height: auto;
 }
@@ -337,16 +336,16 @@ img {
   display: flex;
   height: 30.52vw;
 }
-.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list {
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list-detail {
   margin-right: 1.849568434%;
   width: 30.52vw;
 }
-.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-img {
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list-detail__list-img {
   position: relative;
   display: block;
   padding-bottom: 100%;
 }
-.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list .list-img img {
+.layout-body .section-content.mamonde-exclusive .section-inner .section-main-contents .prd-list-box .prd-list-wrap .list-detail__list-img img {
   position: absolute;
   top: 0;
   left: 0;
@@ -403,4 +402,64 @@ img {
 /* layout__footer */
 .layout-footer {
   margin-top: 3.65vw;
+  padding: 1.8229166667% 2.6041666667%;
+  border-top: 1px solid #e7e6e6;
+}
+.layout-footer .footer-inner {
+  position: relative;
+}
+.layout-footer .footer-inner .sns-wrap {
+  display: flex;
+}
+.layout-footer .footer-inner .sns-wrap__list {
+  margin: 0 0.625%;
+  height: 1.81%;
+  width: 2.4%;
+}
+.layout-footer .footer-inner .sns-wrap__list a {
+  display: block;
+}
+.layout-footer .footer-inner .sns-wrap__list--facebook {
+  margin-left: 0;
+}
+.layout-footer .footer-inner .f-gnb-wrap .f-gnb {
+  margin-top: 1.9230769231%;
+  display: flex;
+}
+.layout-footer .footer-inner .f-gnb-wrap .f-gnb__gnb-list {
+  padding: 0 0.7142857143%;
+  border-right: 1px solid #727272;
+}
+.layout-footer .footer-inner .f-gnb-wrap .f-gnb__gnb-list--bold {
+  font-weight: 600;
+}
+.layout-footer .footer-inner .f-gnb-wrap .f-gnb__gnb-list:nth-child(1) {
+  padding-left: 0;
+}
+.layout-footer .footer-inner .f-gnb-wrap .f-gnb__gnb-list a {
+  font-size: 0.78vw;
+}
+.layout-footer .footer-inner .f-gnb-wrap .center-info {
+  margin-top: 0.5494505495%;
+  font-size: 0.68vw;
+}
+.layout-footer .footer-inner .f-gnb-wrap .copy-right {
+  margin-top: 1.2087912088%;
+  font-size: 0.68vw;
+}
+.layout-footer .footer-inner .img-wrap {
+  position: absolute;
+  width: 10.94vw;
+  top: 0;
+  left: 0;
+  margin-top: 4.010989011%;
+  margin-left: 76.3186813187%;
+}
+.layout-footer .footer-inner .wa-mark {
+  position: absolute;
+  width: 3.13vw;
+  top: 0;
+  left: 0;
+  margin-top: 6.5%;
+  margin-left: 33.2417582418%;
 }/*# sourceMappingURL=style.css.map */
