--- a/appleClone/apple-clone-v11/css/blank.scss
+++ b/appleClone/apple-clone-v11/css/blank.scss
@@ -9,19 +9,156 @@ body {
   color: rgb(29, 29, 31);
   letter-spacing: -0.05em;
   background-color: #fff;
+  box-sizing: border-box;
 }
 p {
   line-height: 1.6;
 }
-
+a {
+  text-decoration: none;
+  color: inherit;
+}
 .global-nav {
   height: 44px;
-  &__link {
+  padding: 0 1rem;
+  &__links {
     height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     max-width: 1000px;
     margin: 0 auto;
+  }
+}
+.local-nav {
+  height: 52px;
+  border-bottom: 1px solid #ddd;
+  &__links {
+    display: flex;
+    align-items: center;
+    max-width: 1000px;
+    height: 100%;
+    margin: 0 auto;
+    a {
+      font-size: 0.8em;
+    }
+    a:not(.product-name) {
+      margin-left: 2em;
+    }
+  }
+  .product-name {
+    margin-right: auto;
+    font-size: 1.4rem;
+    font-weight: bold;
+  }
+}
+.scroll-section {
+  padding-top: 50vh;
+}
+#scroll-section-0 h1 {
+  font-size: 4rem;
+  text-align: center;
+}
+.main-message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3em;
+  font-size: 2.5rem;
+  margin: 5px 0;
+  p {
+    line-height: 1.2;
+    text-align: center;
+    font-weight: bold;
+  }
+  small {
+    display: block;
+    margin-bottom: 0.5em;
+    font-size: 1.2rem;
+  }
+}
+#scroll-section-2 {
+  .main-message {
+    font-size: 3.5rem;
+  }
+}
+.description {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  font-size: 1.2rem;
+  color: #888;
+  strong {
+    float: left;
+    margin-right: 0.2em;
+    font-size: 3rem;
+    color: rgb(29, 29, 31);
+  }
+}
+.desc-message {
+  width: 50%;
+  font-weight: bold;
+}
+.pin {
+  width: 1px;
+  height: 100px;
+  background-color: rgb(29, 29, 31);
+}
+.mid-message {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  font-size: 2rem;
+  color: #888;
+  strong {
+    color: rgb(29, 29, 31);
+  }
+}
+.canvas-caption {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 1rem;
+  font-size: 1.2rem;
+  color: #888;
+}
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 7rem;
+  color: #fff;
+  background-color: darkorange;
+}
+
+@media (min-width: 1024px) {
+  #scroll-section-0 h1 {
+    font-size: 9vw;
+  }
+  .main-message {
+    font-size: 4vw;
+    strong {
+      font-size: 6rem;
+    }
+    small {
+      font-size: 1.5vw;
+    }
+  }
+  .description {
+    font-size: 2rem;
+    strong {
+      font-size: 6rem;
+    }
+  }
+  #scroll-section-2 .main-message {
+    font-size: 6vw;
+  }
+  .desc-message {
+    width: 20%;
+  }
+  .mid-message {
+    font-size: 4vw;
+  }
+  .canvas-caption {
+    font-size: 2rem;
   }
 }
