--- a/appleClone/apple-clone-v11/css/blank.scss
+++ b/appleClone/apple-clone-v11/css/blank.scss
@@ -19,6 +19,10 @@ a {
   color: inherit;
 }
 .global-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 44px;
   padding: 0 1rem;
   &__links {
@@ -31,6 +35,10 @@ a {
   }
 }
 .local-nav {
+  position: absolute;
+  top: 45px;
+  left: 0;
+  width: 100%;
   height: 52px;
   border-bottom: 1px solid #ddd;
   &__links {
@@ -53,6 +61,7 @@ a {
   }
 }
 .scroll-section {
+  border: 3px solid red;
   padding-top: 50vh;
 }
 #scroll-section-0 h1 {
