--- a/appleClone/apple-clone-v11/css/css/blank.css
+++ b/appleClone/apple-clone-v11/css/css/blank.css
@@ -21,6 +21,10 @@ a {
 }
 
 .global-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 44px;
   padding: 0 1rem;
 }
@@ -34,6 +38,10 @@ a {
 }
 
 .local-nav {
+  position: absolute;
+  top: 45px;
+  left: 0;
+  width: 100%;
   height: 52px;
   border-bottom: 1px solid #ddd;
 }
@@ -57,6 +65,7 @@ a {
 }
 
 .scroll-section {
+  border: 3px solid red;
   padding-top: 50vh;
 }
 
