--- a/appleClone/apple-clone-v11/css/blank.scss
+++ b/appleClone/apple-clone-v11/css/blank.scss
@@ -72,9 +72,11 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  top: 35vh;
+  margin: 5px 0;
   height: 3em;
   font-size: 2.5rem;
-  margin: 5px 0;
+  opacity: 0;
   p {
     line-height: 1.2;
     text-align: center;
@@ -142,7 +144,6 @@ a {
 .sticky-elem {
   display: none;
   position: fixed;
-  top: 0;
   left: 0;
   width: 100%;
 }
