--- a/appleClone/apple-clone-v11/css/css/blank.css
+++ b/appleClone/apple-clone-v11/css/css/blank.css
@@ -124,6 +124,16 @@ a {
   background-color: rgb(29, 29, 31);
 }
 
+#scroll-section-2 .b {
+  top: 10%;
+  left: 40%;
+}
+
+#scroll-section-2 .c {
+  top: 15%;
+  left: 45%;
+}
+
 .mid-message {
   max-width: 1000px;
   margin: 0 auto;
@@ -169,6 +179,13 @@ a {
 @media (min-width: 1024px) {
   #scroll-section-0 h1 {
     font-size: 9vw;
+  }
+  #scroll-section-2 .b {
+    top: 20%;
+    left: 50%;
+  }
+  #scroll-section-2 .c {
+    left: 55%;
   }
   .main-message {
     font-size: 4vw;
