--- a/appleClone/apple-clone-v11/css/blank.scss
+++ b/appleClone/apple-clone-v11/css/blank.scss
@@ -64,10 +64,13 @@ a {
   border: 3px solid red;
   padding-top: 50vh;
 }
-#scroll-section-0 h1 {
-  font-size: 4rem;
-  text-align: center;
+#scroll-section-0 {
+  h1 {
+    font-size: 4rem;
+    text-align: center;
+  }
 }
+
 .main-message {
   display: flex;
   align-items: center;
@@ -115,6 +118,14 @@ a {
   height: 100px;
   background-color: rgb(29, 29, 31);
 }
+#scroll-section-2 .b {
+  top: 10%;
+  left: 40%;
+}
+#scroll-section-2 .c {
+  top: 15%;
+  left: 45%;
+}
 .mid-message {
   max-width: 1000px;
   margin: 0 auto;
@@ -157,6 +168,13 @@ a {
 @media (min-width: 1024px) {
   #scroll-section-0 h1 {
     font-size: 9vw;
+  }
+  #scroll-section-2 .b {
+    top: 20%;
+    left: 50%;
+  }
+  #scroll-section-2 .c {
+    left: 55%;
   }
   .main-message {
     font-size: 4vw;
