--- a/appleClone/apple-clone-v11/css/blank.scss
+++ b/appleClone/apple-clone-v11/css/blank.scss
@@ -25,6 +25,7 @@ a {
   width: 100%;
   height: 44px;
   padding: 0 1rem;
+  z-index: 10;
   &__links {
     height: 100%;
     display: flex;
@@ -41,6 +42,7 @@ a {
   width: 100%;
   height: 52px;
   border-bottom: 1px solid #ddd;
+  z-index: 11;
   &__links {
     display: flex;
     align-items: center;
@@ -61,7 +63,6 @@ a {
   }
 }
 .scroll-section {
-  border: 3px solid red;
   padding-top: 50vh;
 }
 #scroll-section-0 {
@@ -163,6 +164,16 @@ a {
 #show-scene-2 #scroll-section-2 .sticky-elem,
 #show-scene-3 #scroll-section-3 .sticky-elem {
   display: block;
+}
+
+.sticky-elem-canvas {
+  top: 0;
+  height: 100%;
+  canvas {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
 }
 
 @media (min-width: 1024px) {
