--- a/appleClone/apple-clone-v11/css/css/blank.css
+++ b/appleClone/apple-clone-v11/css/css/blank.css
@@ -27,6 +27,7 @@ a {
   width: 100%;
   height: 44px;
   padding: 0 1rem;
+  z-index: 10;
 }
 .global-nav__links {
   height: 100%;
@@ -44,6 +45,7 @@ a {
   width: 100%;
   height: 52px;
   border-bottom: 1px solid #ddd;
+  z-index: 11;
 }
 .local-nav__links {
   display: flex;
@@ -65,7 +67,6 @@ a {
 }
 
 .scroll-section {
-  border: 3px solid red;
   padding-top: 50vh;
 }
 
@@ -174,6 +175,16 @@ a {
 #show-scene-2 #scroll-section-2 .sticky-elem,
 #show-scene-3 #scroll-section-3 .sticky-elem {
   display: block;
+}
+
+.sticky-elem-canvas {
+  top: 0;
+  height: 100%;
+}
+.sticky-elem-canvas canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 @media (min-width: 1024px) {
