--- a/appleClone/apple-clone-v11/css/blank.scss
+++ b/appleClone/apple-clone-v11/css/blank.scss
@@ -67,8 +67,11 @@ a {
 }
 #scroll-section-0 {
   h1 {
+    position: relative;
+    z-index: 5;
     font-size: 4rem;
     text-align: center;
+    top: -10vh;
   }
 }
 
@@ -113,6 +116,7 @@ a {
 .desc-message {
   width: 50%;
   font-weight: bold;
+  opacity: 0;
 }
 .pin {
   width: 1px;
