--- a/appleClone/apple-clone-v11/css/blank.scss
+++ b/appleClone/apple-clone-v11/css/blank.scss
@@ -180,6 +180,15 @@ a {
   }
 }
 
+#scroll-section-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.image-blend-canvas {
+  background: blue;
+}
+
 @media (min-width: 1024px) {
   #scroll-section-0 h1 {
     font-size: 9vw;
