--- a/appleClone/apple-clone-v11/css/css/blank.css
+++ b/appleClone/apple-clone-v11/css/css/blank.css
@@ -191,6 +191,16 @@ a {
   left: 50%;
 }
 
+#scroll-section-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-blend-canvas {
+  background: blue;
+}
+
 @media (min-width: 1024px) {
   #scroll-section-0 h1 {
     font-size: 9vw;
