--- a/appleClone/apple-clone-v11/css/css/blank.css
+++ b/appleClone/apple-clone-v11/css/css/blank.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   font-family: "Noto Sans KR", sans-serif;
   font-size: 14px;
@@ -18,6 +19,11 @@ p {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+.container {
+  /* iPhone 가로 스크롤 방지 */
+  overflow-x: hidden;
 }
 
 .global-nav {
@@ -47,6 +53,16 @@ a {
   border-bottom: 1px solid #ddd;
   z-index: 11;
 }
+.local-nav-sticky .local-nav {
+  position: fixed;
+  top: 0;
+  background: rgba(255, 255, 255, 0.1);
+  /* for iPhone */
+  -webkit-backdrop-filter: saturate(180%) blur(15px);
+  -moz-backdrop-filter: saturate(180%) blur(15px);
+  -o-backdrop-filter: saturate(180%) blur(15px);
+  backdrop-filter: saturate(180%) blur(15px);
+}
 .local-nav__links {
   display: flex;
   align-items: center;
@@ -68,6 +84,7 @@ a {
 
 .scroll-section {
   padding-top: 50vh;
+  position: relative;
 }
 
 #scroll-section-0 h1 {
@@ -197,10 +214,6 @@ a {
   align-items: center;
 }
 
-.image-blend-canvas {
-  background: blue;
-}
-
 @media (min-width: 1024px) {
   #scroll-section-0 h1 {
     font-size: 9vw;
@@ -235,7 +248,9 @@ a {
     width: 20%;
   }
   .mid-message {
-    font-size: 4vw;
+    width: 1000px;
+    padding: 0;
+    font-size: 4rem;
   }
   .canvas-caption {
     font-size: 2rem;
